# oc-cost

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/conf/: model_cfg.py
notebooks/: interactive_oc_demo.ipynb
notebooks/exploratory/: image_augmentation.ipynb  interactive_bbox_evaluator.ipynb  interactive_iou_evaluator.ipynb  interactive_oc_demo.ipynb  interactive_otc_design_explore.ipynb  japanese_label.ipynb  measure_behavior_tests.ipynb  per_img_otc.ipynb  plot.ipynb  prototype.ipynb  sampling_balanced_dataset.ipynb  search_hparam_steps.ipynb  upload_reports.ipynb
notebooks/reports/: computational_cost.ipynb  realworld_examples.ipynb  reliability.ipynb  show_examples.ipynb  teaser.ipynb  tuning_on_oc_cost.ipynb  user_study.ipynb
src/dataset/: compile_coco_corrupt.py
src/extensions/dataset/: coco_custom.py  coco_otc.py
src/extensions/hooks/: checkpoint.py  hptune_metric_reporter.py  neptune_logger.py
src/extensions/metrics/: ot_cost.py
src/tools/: corrupt_map_vs_otc.py  effects_max_per_img.py  eval_gt_w_noise.py  evaluate_balanced_dataset.py  evaluate_bootstrap.py  evaluate_on_small_splits.py  human_consistency.py  otc_evaluation.py  otc_search_param_candidates.py  ranking_w_different_params.py  run_evaluation.py  show_model_outputs.py  tune_hparams.py
src/utils/: map_single.py  matplotlib_settings.py  neptune_utils.py  settings.py  visualization.py
tests/: test_metrics.py
